name:                xds-types
version:             0.1.1.0
description:         Common types for xdataset
license:             AllRightsReserved
author:              Alex Babkin
maintainer:          ababkin@gmail.com
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:
    Xds.Directive.Types
    Xds.Directive.Util
    Xds.Stats.Types
    Xds.Types
  other-modules:
    
  hs-source-dirs: src
  ghc-options:    
    -static 
    -Wall 
    -O2

  buildable: True
  build-depends:
      base
    , text
    , transformers
    , mtl >= 2.2.1
    , aeson >= 0.9.0.1 && < 0.10
    , bytestring
    , containers
    , resourcet
    , http-types
    , monad-logger
    , vector >= 0.10.9.1 && < 0.11
    , deepseq >= 1.3.0.2 && < 1.4
    , time >= 1.5.0.1 && < 1.6



